Se agrega las urls correspondientes a los detalles de cada curso, falta redireccionar a la vista con hacer click

--- a/templates/cursos/curso_detalle.html
+++ b/templates/cursos/curso_detalle.html
@@ -12,10 +12,10 @@
         Información del curso</button>
 
     <div id="Demo1" class="w3-container w3-hide w3-pale-red w3-round">
-        <p><ul class="w3-ul w3-light-gray w3-round">
+        <p><ul class="w3-ul w3-light-gray w3-round w3-center">
         <li>Código: {{ curso.get_code }}</li>
-        <li>Semestre:{{ curso.semestre }}</li>
-        <li>Año:{{ curso.año }}</li>
+        <li>Semestre:   {{ curso.semestre }}</li>
+        <li>Año:    {{ curso.año }}</li>
     </ul></p>
     </div>
         </div>
