Edicion de perfiles de evaluadores

--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -9,9 +9,13 @@
 </div>
 
 <div class="w3-container">
-<form action="" method="post">
+<form action="{% url 'evaluadores:update_evaluador' %}" method="post">
     {% csrf_token %}
     <table class="w3-table w3-responsive">
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
         <tr>
             <td> <b>E-Mail</b> </td>
             <td> {{ form.email }}</td>
