--- a/templates/evaluadores/profile.html
+++ b/templates/evaluadores/profile.html
@@ -11,10 +11,21 @@
         {% elif user|is_evaluador %} <b>Profesor</b>
         {% endif %}</h3>
     </div>
-
-    <div class="w3-container">
-        <table class="w3-table">
-            {{ form.as_table }}
-        </table>
-    </div>
+    <!-- Verifica autentificacion -->
+    {% if user.is_authenticated %}
+        <div class="w3-container">
+        <!-- Modificacion de datos de usuario -->
+        <form action = "{% url 'evaluadores:update_evaluador' %}" method="post">
+            {% csrf_token %}
+            <table class="w3-table">
+                {{ form.as_table }}
+            </table>
+            <button class="w3-button w3-red w3-round w3-col w3-margin-top" type="submit">Confirmar cambios</button>
+        </form>
+        </div>
+    {% else %}
+        <div class="w3-container">
+            <a href="{% url 'login'%}?next={{request.path}}">Entra a tu cuenta.</a>
+        </div>
+    {% endif %}
 {% endblock %}
