Errores corregidos en recuperacion de contraseña

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -8,7 +8,10 @@
         <p><h3>Reestablece tu contraseña</h3>
     </div>
     {% if validlink %}
+
         <div class="w3-container">
+        <form action="" method="post">
+            {% csrf_token %}
             <table class="w3-table w3-responsive">
                 <tr>
                     <td><b>Nueva contraseña</b></td>
@@ -23,6 +26,7 @@
                     <td class="w3-center"><input class="w3-button w3-red w3-round" type="submit" value="Reestablecer"/></td>
                 </tr>
             </table>
+        </form>
         </div>
     {% endif %}
 {% endblock %}
