--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="w3-container">
-<form action="{% url 'evaluadores:update_evaluador' %}" method="post">
+<form action="" method="post">
     {% csrf_token %}
     <table class="w3-table w3-responsive">
         <tr>
