--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -9,6 +9,23 @@
      <i class="far fa-arrow-alt-circle-left" style="font-size:300%"></i>
   </div>
 
+  <form action="{% url 'evaluadores:add_profesor' %}" method="post">
+  {% csrf_token %}
+  <table class="w3-table">
+        {{ addForm.as_table}}
+  </table>
+  <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
+  </form>
+
+  <table class="w3-table">
+  {% for profesor in profesores_list %}
+      <tr class='w3-light-gray opcion' id='{{profesor.get_pk}}'>
+                <td class='tabla-elemento w3-center'>{{profesor.get_pk}} </td>
+                <td class='tabla-elemento'>{{profesor}}</td>
+                <td class='tabla-elemento w3-small'> {{ profesor.get_email }} </td>
+      </tr>
+  {% endfor %}
+  </table>
 <!-- W3.CSS Container -->
 <div class="w3-light-grey w3-container w3-padding-16" style="margin-top:50px;padding-right:58px">
   <div class="bottom" id="contact" style="margin-top:50px">
