--- a/templates/evaluacion/evaluacion_admin.html
+++ b/templates/evaluacion/evaluacion_admin.html
@@ -1,5 +1,6 @@
 <!--Evaluaciones-->
 {% extends 'base.html' %}
+{% load evaluador_privileges %}
 {% block content %}
   <!-- Portada -->
   <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
@@ -67,7 +68,7 @@
 
 
 
-
+{% if user|is_admin %}
     <!--Caja agregar-->
 <div class="w3-margin-top w3-container w3-center">
     <button onclick="document.getElementById('agregar').style.display='block'" class="w3-col w3-round w3-button w3-red w3-right">
@@ -88,6 +89,7 @@
       </div>
     </div>
     </div>
+{% endif %}
 <!--Seccion rubricas-->
 
 {% else %}
