--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -23,3 +23,12 @@ body {font-size:16px;}
 .tabla-elemento{
     border: 1px solid #ddd; border-collapse: collapse; width: 33%;
 }
+
+.warning{
+    color: orange
+    
+}
+
+.success{
+    color: green
+}
