--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,56 +1,58 @@
 <!-- Landing page -->
 {% extends 'base.html' %}
 {% block content %}
-  <!-- Portada -->
-  <div class="w3-container" id="portada" style="margin-top:300px; margin-bottom:300px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Bienvenido al sistema de evaluación</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p><h3>Seleccione alguna sección para comenzar</h3></p>
-     <i class="far fa-arrow-alt-circle-left" style="font-size:300%"></i>
-  </div>
+    <!-- Portada -->
+    <div class="w3-container" id="portada" style="margin-top:300px; margin-bottom:300px">
+        <h1 class="w3-xxxlarge w3-text-red"><b>Bienvenido al sistema de evaluación</b></h1>
+        <hr style="width:50px;border:5px solid red" class="w3-round">
+        <p>
+        <h3>Seleccione alguna sección para comenzar</h3></p>
+        <i class="far fa-arrow-alt-circle-left" style="font-size:300%"></i>
+    </div>
 
-  <form action="{% url 'evaluadores:add_profesor' %}" method="post">
-  {% csrf_token %}
-  <table class="w3-table">
-        {{ addForm.as_table}}
-  </table>
-  <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
-  </form>
-
-  <table class="w3-table">
-  {% for profesor in profesores_list %}
-      <tr class='w3-light-gray opcion' id='{{profesor.get_pk}}'>
-                <td class='tabla-elemento w3-center'>{{profesor.get_pk}} </td>
-                <td class='tabla-elemento'>{{profesor}}</td>
-                <td class='tabla-elemento w3-small'> {{ profesor.get_email }} </td>
-      </tr>
-  {% endfor %}
-  </table>
-<!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-16" style="margin-top:50px;padding-right:58px">
-  <div class="bottom" id="contact" style="margin-top:50px">
-    <h1 class="w3-xxlarge w3-text-red"><b>Contacto.</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>¿Dudas? ¿Sugerencias? ¿Reclamos?</p>
-      <p>No dude en contactarnos</p>
-    <form action="/action_page.php" target="_blank">
-      <div class="w3-section">
-        <label>Nombre</label>
-        <input class="w3-input w3-border" type="text" name="Name" required>
-      </div>
-      <div class="w3-section">
-        <label>Email</label>
-        <input class="w3-input w3-border" type="text" name="Email" required>
-      </div>
-      <div class="w3-section">
-        <label>Mensaje</label>
-        <input class="w3-input w3-border" type="text" name="Message" required>
-      </div>
-      <button type="submit" class="w3-button w3-red w3-margin-bottom">Enviar</button>
+    <form action="{% url 'evaluadores:add_profesor' %}" method="post">
+        {% csrf_token %}
+        <table class="w3-table">
+            {{ addForm.as_table }}
+        </table>
+        <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
     </form>
-  </div>
-</div>
-    <p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p>
+
+    <table class="w3-table">
+        {% for profesor in profesores_list %}
+            <tr class='w3-light-gray opcion' id='{{ profesor.get_pk }}'>
+                <td class='tabla-elemento w3-center'>{{ profesor.get_pk }} </td>
+                <td class='tabla-elemento'>{{ profesor }}</td>
+                <td class='tabla-elemento w3-small'> {{ profesor.get_email }} </td>
+            </tr>
+        {% endfor %}
+    </table>
+    <!-- W3.CSS Container -->
+    <div class="w3-light-grey w3-container w3-padding-16" style="margin-top:50px;padding-right:58px">
+        <div class="bottom" id="contact" style="margin-top:50px">
+            <h1 class="w3-xxlarge w3-text-red"><b>Contacto.</b></h1>
+            <hr style="width:50px;border:5px solid red" class="w3-round">
+            <p>¿Dudas? ¿Sugerencias? ¿Reclamos?</p>
+            <p>No dude en contactarnos</p>
+            <form action="/action_page.php" target="_blank">
+                <div class="w3-section">
+                    <label>Nombre</label>
+                    <input class="w3-input w3-border" type="text" name="Name" required>
+                </div>
+                <div class="w3-section">
+                    <label>Email</label>
+                    <input class="w3-input w3-border" type="text" name="Email" required>
+                </div>
+                <div class="w3-section">
+                    <label>Mensaje</label>
+                    <input class="w3-input w3-border" type="text" name="Message" required>
+                </div>
+                <button type="submit" class="w3-button w3-red w3-margin-bottom">Enviar</button>
+            </form>
+        </div>
+    </div>
+    <p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
+                                      class="w3-hover-opacity">w3.css</a></p>
 {% endblock %}
 </div>
 
