--- a/templates/cursos/cursos_admin.html
+++ b/templates/cursos/cursos_admin.html
@@ -2,187 +2,190 @@
 {% extends 'base.html' %}
 {% load evaluador_privileges %}
 {% block content %}
-   <!-- Portada -->
-  <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Cursos</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p><h3>Seleccione un curso</h3></p>
+    <!-- Portada -->
+    <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
+        <h1 class="w3-xxxlarge w3-text-red"><b>Cursos</b></h1>
+        <hr style="width:50px;border:5px solid red" class="w3-round">
+        <p>
+        <h3>Seleccione un curso</h3></p>
 
-  {% if user.is_authenticated %}
- 
-  <input id='buscarNombre' type='text' placeholder="Busque algún curso por su nombre"> 
-  <select id='buscarSemestre'>
-    <option value="None"> Semestre</option>
-    <option value="Otoño">Otoño</option>
-    <option value="Primavera">Primavera</option>
-  </select>
-  <select id="buscarSeccion">
-    <option value="None"> Seccion </option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-    <option value="6">6</option>
-    <option value="7">7</option>
-    <option value="8">8</option>
-    <option value="9">9</option>
-  </select> 
-  <input id="buscarAño" type='text' placeholder="Año" size='4' maxlength=4> 
-  <button class="w3-btn w3-red w3-round-large" onclick='buscar()'>Buscar</button>
+        {% if user.is_authenticated %}
 
-  </div>
+            <input id='buscarNombre' type='text' placeholder="Busque algún curso por su nombre">
+            <select id='buscarSemestre'>
+                <option value="None"> Semestre</option>
+                <option value="Otoño">Otoño</option>
+                <option value="Primavera">Primavera</option>
+            </select>
+            <select id="buscarSeccion">
+                <option value="None"> Seccion</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+            </select>
+            <input id="buscarAño" type='text' placeholder="Año" size='4' maxlength=4>
+            <button class="w3-btn w3-red w3-round-large" onclick='buscar()'>Buscar</button>
 
-<!--Cajas cursos-->
-<div class="w3-container w3-center w3-margin-top">
+            </div>
+
+            <!--Cajas cursos-->
+            <div class="w3-container w3-center w3-margin-top">
 
 
-<table class="w3-table w3-bordered w3-border-black w3-card-4">
-            <thead>
-                <tr>
-                    <th class="w3-red tabla-elemento" > Código </th>
-                    
-                    <th class="w3-red tabla-elemento" > Semestre y año </th>
+                <table class="w3-table w3-bordered w3-border-black w3-card-4">
+                    <thead>
+                    <tr>
+                        <th class="w3-red tabla-elemento"> Código</th>
 
-                    <th class="w3-red tabla-elemento" > Nombre </th>
-                </tr>
-            </thead>
-            <script>
-                var cursosJs= new Array();
-                var cursoJs= new Array();
-            </script>
-            <tbody id='cursos'>
-            {% for curso in cursos_list %}
-            <tr class="w3-light-gray {% if user|is_admin %}opcion{% endif %} clickable-row" id="{{ curso.get_pk }}">
-                <td class="w3-light-gray tabla-elemento" >{{curso}}</td>
-                <td class="w3-light-gray tabla-elemento">{{curso.get_date}}</td>
-                <td class="w3-small w3-light-gray tabla-elemento" style="border: 1px solid #ddd; border-collapse: collapse"> {{ curso.get_name }} </td>
-                
-                <!-- Javascript scan for cursos with format {(codigo,seccion,nombre,semestre,año), ....}-->
-                <script>
-                    cursoJs=[];
-                    cursoJs.push('{{curso.get_pk}}');
-                    cursoJs.push('{{curso.get_code}}');
-                    cursoJs.push('{{curso.get_section}}');
-                    cursoJs.push('{{curso.get_name}}');
-                    cursoJs.push('{{curso.get_semester}}');
-                    cursoJs.push('{{curso.get_year}}');
+                        <th class="w3-red tabla-elemento"> Semestre y año</th>
 
-                    cursosJs.push(cursoJs);
-                </script>
+                        <th class="w3-red tabla-elemento"> Nombre</th>
+                    </tr>
+                    </thead>
+                    <script>
+                        var cursosJs = new Array();
+                        var cursoJs = new Array();
+                    </script>
+                    <tbody id='cursos'>
+                    {% for curso in cursos_list %}
+                        <tr class="w3-light-gray {% if user|is_admin %}opcion{% endif %} clickable-row"
+                            id="{{ curso.get_pk }}">
+                            <td class="w3-light-gray tabla-elemento">{{ curso }}</td>
+                            <td class="w3-light-gray tabla-elemento">{{ curso.get_date }}</td>
+                            <td class="w3-small w3-light-gray tabla-elemento"
+                                style="border: 1px solid #ddd; border-collapse: collapse"> {{ curso.get_name }} </td>
 
-            
-            </tr>
-            {% endfor %}
-            </tbody>
-           
-            
-            <script>
-                function buscar(){
-                    let buscarNombre = document.getElementById('buscarNombre').value;
-                    let buscarSemestre = document.getElementById('buscarSemestre').value;
-                    let buscarSeccion = document.getElementById('buscarSeccion').value;
-                    let buscarAño = document.getElementById('buscarAño').value;
-                    //filter by name first
-                    let filtered = cursosJs.filter((x)=>{
-                        if(buscarNombre==""){
-                          return true;
-                        }
-                        else{
-                          let palabras= x[2].split(" ");
-                          for(let i=0; i<palabras.length; i++){
-                            if(palabras[i].toLowerCase()==buscarNombre.toLowerCase()){
-                              return true;
+                            <!-- Javascript scan for cursos with format {(codigo,seccion,nombre,semestre,año), ....}-->
+                            <script>
+                                cursoJs = [];
+                                cursoJs.push('{{curso.get_pk}}');
+                                cursoJs.push('{{curso.get_code}}');
+                                cursoJs.push('{{curso.get_section}}');
+                                cursoJs.push('{{curso.get_name}}');
+                                cursoJs.push('{{curso.get_semester}}');
+                                cursoJs.push('{{curso.get_year}}');
+
+                                cursosJs.push(cursoJs);
+                            </script>
+
+
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+
+
+                    <script>
+                        function buscar() {
+                            let buscarNombre = document.getElementById('buscarNombre').value;
+                            let buscarSemestre = document.getElementById('buscarSemestre').value;
+                            let buscarSeccion = document.getElementById('buscarSeccion').value;
+                            let buscarAño = document.getElementById('buscarAño').value;
+                            //filter by name first
+                            let filtered = cursosJs.filter((x) => {
+                                if (buscarNombre == "") {
+                                    return true;
+                                } else {
+                                    let palabras = x[2].split(" ");
+                                    for (let i = 0; i < palabras.length; i++) {
+                                        if (palabras[i].toLowerCase() == buscarNombre.toLowerCase()) {
+                                            return true;
+                                        }
+                                    }
+                                    return false;
+                                }
+                            });
+                            //filter by semestre
+                            filtered = filtered.filter((x) => {
+                                if (buscarSemestre == "None") {
+                                    return true;
+                                } else {
+                                    return buscarSemestre == x[3];
+                                }
+
+                            });
+                            //filter by Seccion
+                            filtered = filtered.filter((x) => {
+                                if (buscarSeccion == "None") {
+                                    return true;
+                                } else {
+                                    return buscarSeccion == x[1];
+                                }
+
+                            });
+                            //filter by Año
+                            filtered = filtered.filter((x) => {
+                                if (buscarAño == "") {
+                                    return true;
+                                } else {
+                                    return buscarAño == x[4];
+                                }
+
+                            });
+
+
+                            texto = "";
+                            for (i = 0; i < filtered.length; i++) {
+                                texto += "<tr>";
+                                texto += ("<td class='w3-light-gray tabla-elemento'>" + filtered[i][0] + "-");
+                                texto += (filtered[i][1] + "</td>");
+                                texto += ("<td class='w3-light-gray tabla-elemento'>" + filtered[i][3] + " " + filtered[i][4] + "</td>");
+                                texto += ("<td class='w3-small w3-light-gray tabla-elemento'>" + filtered[i][2] + "</td>");
+
+                                texto += "</tr>";
                             }
-                          }
-                          return false;
+
+                            document.getElementById('cursos').innerHTML = texto;
                         }
-                    });
-                    //filter by semestre
-                    filtered = filtered.filter((x)=>{
-                      if(buscarSemestre=="None"){
-                        return true;
-                      }
-                      else{
-                        return buscarSemestre==x[3];
-                      }
 
-                    });
-                    //filter by Seccion
-                    filtered = filtered.filter((x)=>{
-                      if(buscarSeccion=="None"){
-                        return true;
-                      }
-                      else{
-                        return buscarSeccion==x[1];
-                      }
 
-                    });
-                    //filter by Año
-                    filtered = filtered.filter((x)=>{
-                      if(buscarAño==""){
-                        return true;
-                      }
-                      else{
-                        return buscarAño==x[4];
-                      }
+                    </script>
 
-                    });
-
-        
-
-                    texto="";
-                    for(i=0; i<filtered.length; i++){
-                        texto+="<tr>";
-                        texto+=("<td class='w3-light-gray tabla-elemento'>"+filtered[i][0]+"-");
-                        texto+=(filtered[i][1]+"</td>");
-                        texto+=("<td class='w3-light-gray tabla-elemento'>"+filtered[i][3]+ " "+ filtered[i][4]+"</td>");
-                        texto+=("<td class='w3-small w3-light-gray tabla-elemento'>"+filtered[i][2]+"</td>");
-                        
-                        texto+="</tr>";
-                    }
-                    
-                    document.getElementById('cursos').innerHTML=texto;
-                }
-
-                
-            </script>
-
-        </table>
-</div>
-
-      {% if user|is_admin %}
-    <!--Caja de agregar-->
-<div class="w3-margin-top w3-container w3-center">
-    <button onclick="document.getElementById('agregar').style.display='block'" class="w3-col w3-round w3-button w3-red w3-right">
-            <i class="fas fa-plus" style="text-align: center"></i>
-            Agregar curso</button>
-    </div>
-    <!-- Caja de agregar -->
-    <div id="agregar" class="w3-modal">
-    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
-        <div class="w3-center"><br>
-            <span onclick="document.getElementById('agregar').style.display='none'" class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
-            <form class="w3-container" action="{% url 'cursos:add_curso' %}" method="post">
-                {% csrf_token %}
-                <table class="w3-table">
-                    {{ form.as_table }}
                 </table>
-            <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
-      </form>
-      </div>
-    </div>
-    </div>
-          {% endif %}
+            </div>
+
+            {% if user|is_admin %}
+                <!--Caja de agregar-->
+                <div class="w3-margin-top w3-container w3-center">
+                    <button onclick="document.getElementById('agregar').style.display='block'"
+                            class="w3-col w3-round w3-button w3-red w3-right">
+                        <i class="fas fa-plus" style="text-align: center"></i>
+                        Agregar curso
+                    </button>
+                </div>
+                <!-- Caja de agregar -->
+                <div id="agregar" class="w3-modal">
+                    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+                        <div class="w3-center"><br>
+                            <span onclick="document.getElementById('agregar').style.display='none'"
+                                  class="w3-button w3-xlarge w3-transparent w3-display-topright"
+                                  title="Close Modal">×</span>
+                            <form class="w3-container" action="{% url 'cursos:add_curso' %}" method="post">
+                                {% csrf_token %}
+                                <table class="w3-table">
+                                    {{ form.as_table }}
+                                </table>
+                                <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
 
 
-    <!--cierre de cajas de cursos-->
-</div>
-<!--cierre de contenido-->
-{% else %}
-    <div>
-        <a href="{% url 'login'%}?next={{request.path}}">Entra a tu cuenta.</a>
-    </div>
-{% endif %}
+            <!--cierre de cajas de cursos-->
+            </div>
+            <!--cierre de contenido-->
+        {% else %}
+            <div>
+                <a href="{% url 'login' %}?next={{ request.path }}">Entra a tu cuenta.</a>
+            </div>
+        {% endif %}
 {% endblock %}
 
