--- a/templates/evaluacion/evaluacion_admin.html
+++ b/templates/evaluacion/evaluacion_admin.html
@@ -2,100 +2,105 @@
 {% extends 'base.html' %}
 {% load evaluador_privileges %}
 {% block content %}
-  <!-- Portada -->
-  <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Evaluaciones</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
+    <!-- Portada -->
+    <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
+        <h1 class="w3-xxxlarge w3-text-red"><b>Evaluaciones</b></h1>
+        <hr style="width:50px;border:5px solid red" class="w3-round">
 
-  </div>
+    </div>
 
-{% if user.is_authenticated %}
-    <!--Caja evaluaciones-->
+    {% if user.is_authenticated %}
+        <!--Caja evaluaciones-->
 
-    <div class="w3-container w3-center w3-margin-top">
+        <div class="w3-container w3-center w3-margin-top">
 
 
-<table class="w3-table w3-bordered w3-border-black w3-card-4 w3-centered">
-            <thead>
+            <table class="w3-table w3-bordered w3-border-black w3-card-4 w3-centered">
+                <thead>
                 <tr>
-                    <th class="w3-red tabla-elemento" > Nombre </th>
+                    <th class="w3-red tabla-elemento"> Nombre</th>
 
-                    <th class="w3-red tabla-elemento" > Curso asociado</th>
+                    <th class="w3-red tabla-elemento"> Curso asociado</th>
 
-                    <th class="w3-red tabla-elemento" > Estado </th>
+                    <th class="w3-red tabla-elemento"> Estado</th>
 
-                    <th class="w3-red tabla-elemento" > Fecha inicio</th>
+                    <th class="w3-red tabla-elemento"> Fecha inicio</th>
 
-                    <th class="w3-red tabla-elemento" > Fecha fin</th>
+                    <th class="w3-red tabla-elemento"> Fecha fin</th>
 
-                    <th class="w3-red tabla-elemento" > Duración esperada </th>
+                    <th class="w3-red tabla-elemento"> Duración esperada</th>
                 </tr>
-            </thead>
-            <script>
-                var evaluacionesJs= new Array();
-                var evaluacionJs= new Array();
-            </script>
-            <tbody id='evaluaciones'>
-            {% for evaluacion in evaluacion_list %}
-            <tr>
-                <td class="w3-light-gray tabla-elemento" >{{ evaluacion }}</td>
-                <td class="w3-light-gray tabla-elemento">{{ evaluacion.get_course }}</td>
-                <td class="w3-light-gray tabla-elemento"> {{ evaluacion.get_state }} </td>
-                <td class="w3-light-gray tabla-elemento"> {{ evaluacion.get_startdate }} </td>
-                <td class="w3-light-gray tabla-elemento"> {{ evaluacion.get_enddate }} </td>
-                <td class="w3-light-gray tabla-elemento"> {{ evaluacion.get_rank }} </td>
-
-                <!-- Javascript scan for evaluaciones with format {(nombre, curso, rango, fecha_inicio, fecha_fin, estado), ....}-->
+                </thead>
                 <script>
-                    evaluacionJs=[];
-                    evaluacionJs.push('{{ evaluacion }}');
-                    evaluacionJs.push('{{ evaluacion.get_course }}');
-                    evaluacionJs.push('{{ evaluacion.get_rank }}');
-                    evaluacionJs.push('{{ evaluacion.get_startdate }}');
-                    evaluacionJs.push('{{ evaluacion.get_enddate }}');
-                    evaluacionJs.push('{{ evaluacion.get_state }}');
-
-                    evaluacionesJs.push(evaluacionJs);
+                    var evaluacionesJs = new Array();
+                    var evaluacionJs = new Array();
                 </script>
+                <tbody id='evaluaciones'>
+                {% for evaluacion in evaluacion_list %}
+                    <tr>
+                        <td class="w3-light-gray tabla-elemento">{{ evaluacion }}</td>
+                        <td class="w3-light-gray tabla-elemento">{{ evaluacion.get_course }}</td>
+                        <td class="w3-light-gray tabla-elemento"> {{ evaluacion.get_state }} </td>
+                        <td class="w3-light-gray tabla-elemento"> {{ evaluacion.get_startdate }} </td>
+                        <td class="w3-light-gray tabla-elemento"> {{ evaluacion.get_enddate }} </td>
+                        <td class="w3-light-gray tabla-elemento"> {{ evaluacion.get_rank }} </td>
+
+                        <!-- Javascript scan for evaluaciones with format {(nombre, curso, rango, fecha_inicio, fecha_fin, estado), ....}-->
+                        <script>
+                            evaluacionJs = [];
+                            evaluacionJs.push('{{ evaluacion }}');
+                            evaluacionJs.push('{{ evaluacion.get_course }}');
+                            evaluacionJs.push('{{ evaluacion.get_rank }}');
+                            evaluacionJs.push('{{ evaluacion.get_startdate }}');
+                            evaluacionJs.push('{{ evaluacion.get_enddate }}');
+                            evaluacionJs.push('{{ evaluacion.get_state }}');
+
+                            evaluacionesJs.push(evaluacionJs);
+                        </script>
 
 
-            </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-</div>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
 
 
 
-{% if user|is_admin %}
-    <!--Caja agregar-->
-<div class="w3-margin-top w3-container w3-center">
-    <button onclick="document.getElementById('agregar').style.display='block'" class="w3-col w3-round w3-button w3-red w3-right">
-            <i class="fas fa-plus" style="text-align: center"></i>
-            Agregar evaluación</button>
-</div>
-    <div id="agregar" class="w3-modal">
-    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
-        <div class="w3-center"><br>
-            <span onclick="document.getElementById('agregar').style.display='none'" class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
-            <form class="w3-container" action="{% url 'evaluaciones:add_evaluacion' %}" method="post">
-                {% csrf_token %}
-                <table class="w3-table">
-                    {{ form.as_table }}
-                </table>
-            <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
-      </form>
-      </div>
+        {% if user|is_admin %}
+            <!--Caja agregar-->
+            <div class="w3-margin-top w3-container w3-center">
+                <button onclick="document.getElementById('agregar').style.display='block'"
+                        class="w3-col w3-round w3-button w3-red w3-right">
+                    <i class="fas fa-plus" style="text-align: center"></i>
+                    Agregar evaluación
+                </button>
+            </div>
+            <div id="agregar" class="w3-modal">
+                <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+                    <div class="w3-center"><br>
+                        <span onclick="document.getElementById('agregar').style.display='none'"
+                              class="w3-button w3-xlarge w3-transparent w3-display-topright"
+                              title="Close Modal">×</span>
+                        <form class="w3-container" action="{% url 'evaluaciones:add_evaluacion' %}" method="post">
+                            {% csrf_token %}
+                            <table class="w3-table">
+                                {{ form.as_table }}
+                            </table>
+                            <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+        <!--Seccion rubricas-->
+
+    {% else %}
+        <div class="w3-container">
+            <a href="{% url 'login' %}?next={{ request.path }}">Entra a tu cuenta.</a>
+        </div>
+    {% endif %}
     </div>
-    </div>
-{% endif %}
-<!--Seccion rubricas-->
-
-{% else %}
-    <div class="w3-container">
-        <a href="{% url 'login'%}?next={{request.path}}">Entra a tu cuenta.</a>
-    </div>
-{% endif %}
-</div>
 {% endblock %}
