--- a/templates/evaluacion/postevaluacion.html
+++ b/templates/evaluacion/postevaluacion.html
@@ -2,49 +2,53 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="w3-container" id="designers" style="margin-top:50px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Evaluación <i class="w3-text-blue">entregada</i> </b></h1>
-    <i class="w3-large w3-text-green"><i class="far fa-clock"></i> Aún activa </i>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-    <div class="w3-container w3-center">
-    <p><b>Lambda-Ideas</b> Presentación Tarea 2 <i>CC4401-1/Otoño/2019</i></p>
-    <p><i class="w3-text-blue">Su operación se ha procesado exitosamente!</i></p> </div>
+    <div class="w3-container" id="designers" style="margin-top:50px">
+        <h1 class="w3-xxxlarge w3-text-red"><b>Evaluación <i class="w3-text-blue">entregada</i> </b></h1>
+        <i class="w3-large w3-text-green"><i class="far fa-clock"></i> Aún activa </i>
+        <hr style="width:50px;border:5px solid red" class="w3-round">
+        <div class="w3-container w3-center">
+            <p><b>Lambda-Ideas</b> Presentación Tarea 2 <i>CC4401-1/Otoño/2019</i></p>
+            <p><i class="w3-text-blue">Su operación se ha procesado exitosamente!</i></p></div>
 
-    <div class="w3-container">
+        <div class="w3-container">
             <h4><b>Resumen de evaluación</b></h4>
             <p>Contenidos</p>
             <div class="w3-grey">
-              <div class="w3-container w3-center w3-padding w3-orange" style="width:25%">25%</div>
+                <div class="w3-container w3-center w3-padding w3-orange" style="width:25%">25%</div>
             </div>
             <p>Calidad del material</p>
             <div class="w3-grey">
-              <div class="w3-container w3-center w3-padding w3-green" style="width:75%">75%</div>
+                <div class="w3-container w3-center w3-padding w3-green" style="width:75%">75%</div>
             </div>
             <p>Relación con requisitos funcionales</p>
             <div class="w3-grey">
-              <div class="w3-container w3-center w3-padding w3-green" style="width:75%">75%</div>
+                <div class="w3-container w3-center w3-padding w3-green" style="width:75%">75%</div>
             </div>
             <p>Organización de la información</p>
             <div class="w3-grey">
-              <div class="w3-container w3-center w3-padding w3-blue" style="width:100%">100%</div>
+                <div class="w3-container w3-center w3-padding w3-blue" style="width:100%">100%</div>
             </div>
             <p>Forma</p>
             <div class="w3-grey">
-              <div class="w3-container w3-center w3-padding w3-red" style="width:10%">0%</div>
+                <div class="w3-container w3-center w3-padding w3-red" style="width:10%">0%</div>
             </div>
             <p>Entusiasmo</p>
             <div class="w3-grey">
-              <div class="w3-container w3-center w3-padding w3-orange" style="width:25%">25%</div>
+                <div class="w3-container w3-center w3-padding w3-orange" style="width:25%">25%</div>
             </div>
 
             <div class="w3-panel w3-right w3-half" style="margin-top: 50px">
-                    <button class="w3-button w3-xlarge w3-red w3-margin-bottom" style="margin-left: 15%" onclick="location.href='evaluacion'"> <i class="fas fa-pen"></i>  Editar evaluación</button>
-                    <button class="w3-button w3-xlarge w3-red" style="margin-left: 15%" onclick="location.href='evaluaciones'" > <i class="fas fa-door-open"></i> Volver a evaluaciones</button>
+                <button class="w3-button w3-xlarge w3-red w3-margin-bottom" style="margin-left: 15%"
+                        onclick="location.href='evaluacion'"><i class="fas fa-pen"></i> Editar evaluación
+                </button>
+                <button class="w3-button w3-xlarge w3-red" style="margin-left: 15%"
+                        onclick="location.href='evaluaciones'"><i class="fas fa-door-open"></i> Volver a evaluaciones
+                </button>
 
-                </div>
+            </div>
 
 
+        </div>
     </div>
-</div>
 
 {% endblock %}
