--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -5,28 +5,30 @@
     <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
         <h1 class="w3-xxxlarge w3-text-red"><b>Recuperación</b></h1>
         <hr style="width:50px;border:5px solid red" class="w3-round">
-        <p><h3>Reestablece tu contraseña</h3>
+        <p>
+        <h3>Reestablece tu contraseña</h3>
     </div>
     {% if validlink %}
 
         <div class="w3-container">
-        <form action="" method="post">
-            {% csrf_token %}
-            <table class="w3-table w3-responsive">
-                <tr>
-                    <td><b>Nueva contraseña</b></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td><b>Confirma contraseña</b></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td class="w3-center"><input class="w3-button w3-red w3-round" type="submit" value="Reestablecer"/></td>
-                </tr>
-            </table>
-        </form>
+            <form action="" method="post">
+                {% csrf_token %}
+                <table class="w3-table w3-responsive">
+                    <tr>
+                        <td><b>Nueva contraseña</b></td>
+                        <td>{{ form.new_password1 }}</td>
+                    </tr>
+                    <tr>
+                        <td><b>Confirma contraseña</b></td>
+                        <td>{{ form.new_password2 }}</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td class="w3-center"><input class="w3-button w3-red w3-round" type="submit"
+                                                     value="Reestablecer"/></td>
+                    </tr>
+                </table>
+            </form>
         </div>
     {% endif %}
 {% endblock %}
