--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -2,14 +2,15 @@
 
 {% block content %}
 
-<div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
+    <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
         <h1 class="w3-xxxlarge w3-text-red"><b>Recuperación</b></h1>
         <hr style="width:50px;border:5px solid red" class="w3-round">
-        <p><h3>Reestablece tu contraseña</h3>
-</div>
+        <p>
+        <h3>Reestablece tu contraseña</h3>
+    </div>
 
-<div class="w3-container">
-Hemos enviado a tu correo los pasos a seguir para reestablecer tu contraseña.
-</div>
+    <div class="w3-container">
+        Hemos enviado a tu correo los pasos a seguir para reestablecer tu contraseña.
+    </div>
 
 {% endblock %}
