--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,30 +2,32 @@
 
 {% block content %}
 
-<div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
+    <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
         <h1 class="w3-xxxlarge w3-text-red"><b>Recuperación</b></h1>
         <hr style="width:50px;border:5px solid red" class="w3-round">
-        <p><h3>Reestablece tu contraseña</h3>
-</div>
+        <p>
+        <h3>Reestablece tu contraseña</h3>
+    </div>
 
-<div class="w3-container">
-<form action="" method="post">
-    {% csrf_token %}
-    <table class="w3-table w3-responsive">
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td> <b>E-Mail</b> </td>
-            <td> {{ form.email }}</td>
-        </tr>
-        <tr>
-            <td></td>
-            <td class="w3-center"> <input type="submit" class="w3-button w3-red w3-round" value="Reestablecer"/></td>
-        </tr>
-    </table>
-</form>
-</div>
+    <div class="w3-container">
+        <form action="" method="post">
+            {% csrf_token %}
+            <table class="w3-table w3-responsive">
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><b>E-Mail</b></td>
+                    <td> {{ form.email }}</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="w3-center"><input type="submit" class="w3-button w3-red w3-round" value="Reestablecer"/>
+                    </td>
+                </tr>
+            </table>
+        </form>
+    </div>
 
 {% endblock %}
