--- a/templates/rubrica/rubrica_admin.html
+++ b/templates/rubrica/rubrica_admin.html
@@ -2,39 +2,44 @@
 {% extends 'base.html' %}
 {% load evaluador_privileges %}
 {% block content %}
-  <!-- Portada -->
-  <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Rúbricas</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-  </div>
+    <!-- Portada -->
+    <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
+        <h1 class="w3-xxxlarge w3-text-red"><b>Rúbricas</b></h1>
+        <hr style="width:50px;border:5px solid red" class="w3-round">
+    </div>
 
-{% if user.is_authenticated %}
-    {% if user|is_admin %}
-   <div class="w3-margin-top w3-container w3-center">
-    <button onclick="document.getElementById('agregar').style.display='block'" class="w3-col w3-round w3-button w3-red w3-right">
-            <i class="fas fa-user-plus" style="text-align: center"></i>
-            Agregar rúbrica</button>
-    </div>
-    <!-- Formulario de agregar -->
-    <div id="agregar" class="w3-modal">
-    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
-        <div class="w3-center"><br>
-            <span onclick="document.getElementById('agregar').style.display='none'" class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
-            <form class="w3-container" action="{% url 'rubricas:add_rubrica' %}" method="post">
-                {% csrf_token %}
-                <table class="w3-table">
-                    {{ form.as_table }}
-                </table>
-            <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar</button>
-            </form>
-      </div>
-    </div>
-    </div>
+    {% if user.is_authenticated %}
+        {% if user|is_admin %}
+            <div class="w3-margin-top w3-container w3-center">
+                <button onclick="document.getElementById('agregar').style.display='block'"
+                        class="w3-col w3-round w3-button w3-red w3-right">
+                    <i class="fas fa-user-plus" style="text-align: center"></i>
+                    Agregar rúbrica
+                </button>
+            </div>
+            <!-- Formulario de agregar -->
+            <div id="agregar" class="w3-modal">
+                <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+                    <div class="w3-center"><br>
+                        <span onclick="document.getElementById('agregar').style.display='none'"
+                              class="w3-button w3-xlarge w3-transparent w3-display-topright"
+                              title="Close Modal">×</span>
+                        <form class="w3-container" action="{% url 'rubricas:add_rubrica' %}" method="post">
+                            {% csrf_token %}
+                            <table class="w3-table">
+                                {{ form.as_table }}
+                            </table>
+                            <button class="w3-button w3-block w3-red w3-section w3-padding" type="submit">Agregar
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+    {% else %}
+        <div class="w3-container">
+            <a href="{% url 'login' %}?next={{ request.path }}">Entra a tu cuenta.</a>
+        </div>
     {% endif %}
-{% else %}
-    <div class="w3-container">
-        <a href="{% url 'login'%}?next={{request.path}}">Entra a tu cuenta.</a>
-    </div>
-{% endif %}
 {% endblock %}
 
